[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = "simple chatbot using chatgpt"
authors = ["Your Name venujasbt@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyrogram = "^1.2.9"
openai = "^0.10.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
your-script-name = "chatbot:main"

[tool.poetry.extras]
